--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -125,114 +125,14 @@ jobs:
           username: ${{github.actor}}
           password: ${{ secrets.CHANGELOG }}
       - name: Build Docker image
-        run: echo "docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  ."
+        run: docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  .
       - name: Push Docker image
-        run: echo "docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }} "
+        run: docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}
 
       ##TODO check this
       - name: Build Docker image with tag
         run: |
           if [ "${{ github.event.release.tag_name }}" != '' ]; then
-            echo "docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.TAG_NAME }}  ."
-            echo "docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.TAG_NAME }}"
+            docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.TAG_NAME }}  .
+            docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.TAG_NAME }}
           fi
-
-  # deploy:
-  #   if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
-  #   runs-on: ubuntu-22.04
-  #   needs: build
-  #   permissions: write-all
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       # os: [ windows, macos, ubuntu ]
-  #       node-version: [18.x]
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Set project name
-  #       run: echo "REPOSITORY_NAME=middleware-maraffa" >> $GITHUB_ENV
-  #     - name: Set build version
-  #       run: echo "BUILD_VERSION=1.0.0" >> $GITHUB_ENV
-  #     - name: lowercase github.repository
-  #       run: |
-  #         echo "IMAGE_NAME=`echo ${{github.repository_owner}}/${{ env.REPOSITORY_NAME }} | tr '[:upper:]' '[:lower:]'`" >>${GITHUB_ENV}
-  #       if: ${{ github.ref }} == 'refs/heads/main'
-  #     - name: Extract tag name # Impllcit constraint the tag can be done only from release in main branch
-  #       run: echo "TAG_NAME=${{ github.event.release.tag_name }}"
-  #     - name: Set version with latest
-  #       run: echo "VERSION=latest" >> $GITHUB_ENV
-  #       if: ${{ github.ref }} != 'refs/heads/main'
-  #     - name: Set version with Develop
-  #       run: echo "VERSION=develop" >> $GITHUB_ENV
-  #     - name: Use cache
-  #       uses: actions/cache@v2
-  #       id: restore-build
-  #       with:
-  #         path: ./*
-  #         key: ${{ github.sha }}
-  #     - run: ls
-  #     - name: "Login to GitHub Container Registry"
-  #       uses: docker/login-action@v1
-  #       with:
-  #         registry: ghcr.io
-  #         username: ${{github.actor}}
-  #         password: ${{secrets.GITHUB_TOKEN}}
-  #     - name: Build Docker image
-  #       run: docker build -t ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}  .
-  #     - name: Push Docker image
-  #       run: docker push ghcr.io/${{ env.IMAGE_NAME}}:${{ env.VERSION }}
-
-  # test:
-  #   name: test
-  #   needs:
-  #   - build
-  #   runs-on: ubuntu-22.04
-  #   #if: contains(github.event.pull_request.labels.*.name, 'STAGING')
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: Package
-  #         path: build/*
-  # - name: Test
-  #   run: gradle test
-  # - name: Use cache
-  #   uses: actions/cache@v2
-  #   id: restore-build
-  #   with:
-  #     path: ./*
-  #     key: ${{ github.sha }}
-
-  # success:
-  #   runs-on: ubuntu-22.04
-  #   needs:
-  #     - build
-  #   if: >-
-  #     always() && (
-  #       contains(join(needs.*.result, ','), 'failure')
-  #       || !contains(join(needs.*.result, ','), 'cancelled')
-  #     )
-  #   steps:
-  #     - name: Verify that there were no failures
-  #       run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
-
-  # - name: Init gradle wrapper
-  #   run: gradle wrapper
-  # - name: Change wrapper permissions
-  #   run: chmod +x ./gradlew
-  # - name: Build with Gradle wrapper
-  #   run: ./gradlew build
-
-  # - name: checkout
-  #   uses: actions/checkout@v2
-
-  # - name: Setup JDK 1.8
-  #   uses: actions/setup-java@v2
-  #   with:
-  #     java-version: '8'
-  #     distribution: 'adopt'
-
-  # - name: Grant Permissions to gradlew
-  #   run: chmod +x gradlew
-  # - name: Test
-  #   run: ./gradlew test --tests "*"
